--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     </div>
                 </div>
                 <div class="app-title">
-                    <img src="icons/clipboard-list.svg" alt="Lista" class="icon-svg">
+                    <img src="icons/clipboard-list.svg" alt="Lista" class="icon-svg app-title-icon">
                     <div class="app-title-text">
                         <span>Análisis de Partido</span>
-                        <div class="app-version">V.6.2</div>
+                        <div class="app-version">V.7.0</div>
                     </div>
                 </div>
             </div>
